base/src/test/resources/failure/patterns/issues-archived/issue319.aya.txt
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def cov (a b c d : Nat) : Nat
          ^-^

Error: Unhandled case: suc _, suc _, suc zero
What are you doing?
